2012-10-29  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c: Save axis scaling for 3D 'set view map' plots so
	that outboard drivers can continue mousing in -persist mode.

	* term/canvas.trm term/svg.trm: Sort out the up/down polarity of
	mousing limits in 3D 'set view map' plots. Bug #3581514

	* src/term.c src/term_api.h term/xlib.trm: Remove vestigial traces
	of ipc_back_fd outside of its scope (term.c).

	* term/debug.trm: Add entry points for filled_polygon, layer,
	set_color, path, image.

	* src/term.c src/gadgets.c src/set.c term/README:  Add a default
	routine null_set_font() so that code does not have to test every
	time whether the current terminal supports term->set_font() or not.

	* src/color.c src/color.h src/eval.c src/getcolor.c src/getcolor.h
	docs/gnuplot.doc:  
	New user-visible function hsv2rgb(H,S,V) creates a 24-bit RGB value
	from real H,S,V values in the range [0:1]. This allows use of hsv colors
	in plots with coloring style "rgb variable".  The new function can be
	used to implement the capability suggested by Shige Takeno:
	  hsv(h,s,v) = sprintf("#%06x",hsv2rgb(h,s,v))
	  plot FOO lc rgb hsv(H,S,V)

	* demo/all.dem demo/complex_trig.dem demo/html/index.canvas
	demo/html/index.save demo/html/index.svg demo/html/Makefile
	demo/rgb_variable.dem:  Demos for HSV coloring, including a new demo
	for complex-valued trig functions.

2012-10-26  Ethan A Merritt  <merritt@u.washington.edu>

	* src/mouse.c src/mouse.h src/mousecmn.h src/term_api.h:  
	Allow the "bind" command to attach a user command to mouse button 1,
	at least for 2D plots.

2012-10-22  Ethan A Merritt  <merritt@u.washington.edu>

	* term/xlib.trm: Reset X11_ipc when xlib terminal exits; otherwise a
	subsequent "set term x11" fails to send output to gnuplot_x11.

	* term/x11.trm: Filter out redundant move/vector/set_color commands.
	- Do not send a Move or Vector command to gnuplot_x11 if the previous
	  move/vector went to the same coordinates.